cmake_minimum_required(VERSION 3.13)
project(lab3)

set(CMAKE_C_STANDRD 11)

add_subdirectory(1_fork)
add_subdirectory(3_fight)
add_subdirectory(4_fight_sleep)
add_subdirectory(5_father_son)
add_subdirectory(8_exec)
add_subdirectory(9_wait)
add_subdirectory(10_scheduler)
add_subdirectory(11_inheritance)
add_subdirectory(12_interaction)
add_subdirectory(13_signals)
add_subdirectory(14_util)
add_subdirectory(18_threads)
add_subdirectory(19_threads_kill)
add_subdirectory(20_threads_signal)
add_subdirectory(21_threads_handler)
add_subdirectory(22_ctrl_c)
add_subdirectory(23_signals)
add_subdirectory(24_inheritance)
