project(13_signals)

add_executable(father_signals father.c)
add_executable(father_active_passive father_active_passive.c)
add_executable(son1_signals son1.c)
add_executable(son2_signals son2.c)
add_executable(son3_signals son3.c)
add_executable(son_active son_active.c)
add_executable(son_passive son_passive.c)